--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
 body {
     margin: 0;
+    background-color: #161a1d;
+    color: aliceblue;
+}
+
+table {
+    border: 1px solid blue;
+    padding: 0;
+}
+
+table td,
+th,
+tr {
+    border: 1px solid blue;
+    padding: 1rem;
 }
