--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,11 @@ body {
     color: aliceblue;
 }
 
-table {
-    border: 1px solid blue;
-    padding: 0;
+.container {
+    display: flex;
+    flex-direction: column;
+    max-width: 40%;
+    margin: auto;
 }
 
 table td,
@@ -14,4 +16,5 @@ th,
 tr {
     border: 1px solid blue;
     padding: 1rem;
+    text-align: center;
 }
